deps/v8/test/message/arrow-invalid-rest.out
*%(basename)s:7: SyntaxError: Unexpected token =
var f = (...x = 10) => x;
              ^
SyntaxError: Unexpected token =
